src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: "white";
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.head {
  font-family: Eras;
  color: white;
  font-size: 50px;
  padding-left: 10px;

  background-color: black;
  padding: 30px;
  box-shadow: 0px 40px 50px grey;
  margin-top: 0px;
}

.navhead {
  font-family: Eras;
  color: white;
  font-size: 50px;
  padding: 30px;
  margin-left: -30px;
}

.navbackground {
  background-color: #dedede;
}

.nav {
  font-family: Eras;
  color: white;
  font-size: 20px;
  padding: 55px;
  margin-left: 40px;
}

.undraggable {
  user-drag: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

@font-face {
  font-family: "Eras";
  src: local("Eras"), url(./fonts/ITCErasStd-Light.otf);
}

@font-face {
  font-family: "Typo Round";
  src: local("Typo Round"), url(./fonts/Typo_Round_Regular_Demo.otf);
}

@font-face {
  font-family: "Kalyant";
  src: local("Kalyant"), url(./fonts/KalyantDemo-4By5l.otf);
}

@font-face {
  font-family: "Kalyant-Bold";
  src: local("Kalyant-Bold"), url(./fonts/KalyantDemoBold-PKZ4d.otf);
}

.testForm {
  border: 3px solid #f1f1f1;
  width: 50%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 150px;
}

input[type="text"],
input[type="password"] {
  width: 60%;
  padding: 12px 20px;
  margin: 8px 0;
  display: block;
  border: 1px solid #ccc;
  box-sizing: border-box;
  margin-left: 110px;
}

label {
  margin-left: 110px;
}

.container {
  padding: 16px;
}

button:hover {
  opacity: 1;
}

.wrapper{
  display: flex;
  position: relative;
}

.wrapper .sidebar{
  width: 11vw;
  height: 100%;
  background: #1f1f1f;
  padding: 30px 0px;
  position: fixed;
}

.logo {
  width: 11vw
}

.main_content {
  width: 100%;
  height: 100vh;
  margin-left: 12vw;
}

.spoonsButton {
  background-color:#ffffff;
  background: none;
  width: 400px;
  margin-left: 31vw;
  border: none;
  margin-top: 6vh
}

.spoons {
  background: white;
  width: 400px;
}

.global {
  overflow-x: hidden;
  height: auto;
}

.info {
  padding-top: 5.1vw;
  margin-left: 4.5vw;
  width: 75vw
}

.modal-body .startButton {
  background-color:#ffffff;
  background: none;
  border: none; 
  transition: transform 0.2s;
}

.modal-body .startButton:hover {
  transform: scale(1.1);
}

.modal-div {
  margin-left: 10%;
  margin-right: 10%;
}

.kalyant {
  font-family: "Kalyant";
}

.kalyant-bold{
  font-family: "Kalyant-Bold";
}

.movelog tr:nth-child(even) {background-color: #f2f2f2;}

table {
  display: block;
  box-shadow: 1px 1px 4px #888888;
}

.movelog {
  overflow-y:scroll;
  height: 23vh;
  padding-left: 8px;
  padding-right: 4px;
}

.movelog {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

.movelog::-webkit-scrollbar {
  display: none;
}

.table.movelog{
  width: 23.5vw;
  box-shadow: none;
}

.endgameText {
  color: black;
}

.guibuttons {
  background-color:#ffffff;
  background: none;
  border: none; 
  transition: transform 0.2s;
}

.guibuttons:hover {
  transform: scale(1.1);
}

.gui {
  padding-top: 7vh;
}

.chessboard {
  padding-top: 5vh;
  margin-left: 10vw;
}

.chat {
  margin-top: 100;
}

.settings {
  margin-top: 55vh;
  margin-left: 1vw;
  width: 9vw;
  transition: transform 0.2s;
}

.settings:hover {
  transform: scale(1.12);
}

.highlightedSkin {
  background-color: rgb(213, 238, 255);
}

.settingsButton {
  background-color:#ffffff;
  background: none;
  border: none;
  transition: transform 0.2s;
}

.settingsButton:hover {
  transform:scale(1.05);
}

.settingsIcon {
  width: 15vw;
}

.skin {
  filter:drop-shadow(2px 2px 2px gray); 
}

